fix(frontend): remove horizontal scroll bar from friendship requests and friendships in friendship menu side panel

--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -188,7 +188,6 @@
   display: flex;
   justify-content: space-between;
   gap: $gap;
-  width: 100%;
 }
 
 @mixin default-input-form-styles($bg-color) {
